Transform Cognitron into JobHunt job aggregation plateform Job data model with search indexes - Multi-site URL generation (Naukri, Indeed, LinkedIn) - Job extraction with skill detection - REST API with search, filter, and pagination - Duplicate detection and test data