@@ -1,12 +1,17 @@
 package com.proc.proc.Service;
 
+import com.proc.proc.Model.CrawlConfig;
+import com.proc.proc.Model.CrawlMessage;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+
 
 @Service
 public class LinkExtractorService {
@@ -16,7 +21,6 @@ public class LinkExtractorService {
             ".ico", ".pdf", ".zip", ".rar", ".mp4", ".mp3", ".woff",
             ".ttf", ".eot", ".exe", ".bin"
     );
-
 
     public Set<String> extractLinks(String html) {
         if (html == null || html.isBlank()) {
@@ -36,36 +40,69 @@ public class LinkExtractorService {
         return links;
     }
 
-
-    public Set<String> filterLinks(Set<String> rawLinks) {
-        if (rawLinks == null || rawLinks.isEmpty()) {
-            return Collections.emptySet();
+    public Set<String> filterLinks(Set<String> raw, CrawlMessage msg) {
+        CrawlConfig config = msg.getConfig();
+        if (config == null) {
+            return Set.of();
         }
 
-        Set<String> filtered = new HashSet<>();
+        int depth = msg.getDepth();
 
-        rawLinks.forEach(url -> {
-            if (url.isBlank()) return;
+        if (depth >= config.getMaxDepth()) return Set.of();
 
+        return raw.stream()
+                .filter(url -> !hasBlockedExtension(url))
+                .filter(this::isValidUrl)
+                .filter(url -> config.isRestrictDomain() ? sameDomain(url, msg.getUrl()) : true)
+                .filter(url -> matchesKeywords(url, config.getTopicKeywords()))
+                .collect(Collectors.toSet());
+    }
 
-            if (url.startsWith("javascript:") || url.startsWith("mailto:") || url.startsWith("tel:")) return;
+    private boolean matchesKeywords(String url, List<String> keywords) {
+        if (keywords == null || keywords.isEmpty()) {
+            return true;
+        }
 
-            if (!url.startsWith("http")) return;
+        String lowerUrl = url.toLowerCase();
+        return keywords.stream().anyMatch(keyword ->
+                lowerUrl.contains(keyword.toLowerCase())
+        );
+    }
 
-            url = removeFragment(url);
-            url = removeTrailingSlash(url);
+    private boolean sameDomain(String url, String baseUrl) {
+        try {
+            String domain1 = new java.net.URL(url).getHost();
+            String domain2 = new java.net.URL(baseUrl).getHost();
 
-            if (hasBlockedExtension(url)) return;
+            if (domain1 == null || domain2 == null) {
+                return false;
+            }
 
-            filtered.add(url);
-        });
+            domain1 = domain1.replaceAll("^www\\.", "");
+            domain2 = domain2.replaceAll("^www\\.", "");
 
-        return filtered;
+            return domain1.equals(domain2);
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     private String removeFragment(String url) {
         int idx = url.indexOf("#");
         return (idx != -1) ? url.substring(0, idx) : url;
+    }
+
+    private boolean isValidUrl(String url) {
+        if (url == null || url.isBlank()) {
+            return false;
+        }
+
+        try {
+            new java.net.URL(url).toURI();
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     private String removeTrailingSlash(String url) {
@@ -78,5 +115,23 @@ public class LinkExtractorService {
     private boolean hasBlockedExtension(String url) {
         String lower = url.toLowerCase();
         return BLOCKED_EXTENSIONS.stream().anyMatch(lower::endsWith);
+    }
+
+    public boolean isRelevant(CrawlMessage msg) {
+
+        if (msg.getConfig() == null ||
+                msg.getConfig().getTopicKeywords() == null ||
+                msg.getConfig().getTopicKeywords().isEmpty()) {
+            return true;
+        }
+
+        String text = (msg.getTitle() + " " + msg.getText()).toLowerCase();
+
+        for (String keyword : msg.getConfig().getTopicKeywords()) {
+            if (text.contains(keyword.toLowerCase())) {
+                return true;
+            }
+        }
+        return false;
     }
 }
